# ocsf-simulator

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ocsfsim/: main.py  utils.py
